syntax = "proto3";
package petri.bandoracle.v1beta1;

import "gogoproto/gogo.proto";
import "petri/bandoracle/v1beta1/params.proto";
import "petri/bandoracle/v1beta1/fetch_price.proto";


option go_package = "github.com/petrichormoney/petri/x/bandoracle/types";

message GenesisState {
    Params params = 1 [(gogoproto.nullable) = false ];
    string port_id = 2;
    bool flag = 3;
}
